# th-lift-instances

./: .dir-locals.el  .gitignore  .travis.yml  README.md  Setup.hs  th-lift-instances.cabal
src/Instances/TH/: Lift.hs
src/Instances/TH/Lift/: Internal.hs
tests/: Data.hs  Main.hs  doctests.hsc
travis/: cabal.project.local  install-deps.sh  install-tools.sh  install.sh  lib.sh  script.sh  setup.sh
travis/sdist-test/: cabal.project
