name: th-lift-instances
version: 0.1.6
cabal-version: >=1.10
build-type: Custom
license: BSD3
license-file: LICENSE
copyright: Copyright (C) 2013-2014 Benno Fünfstück
maintainer: Benno Fünfstück <benno.fuenfstueck@gmail.com>
stability: experimental
homepage: http://github.com/bennofs/th-lift-instances/
bug-reports: http://github.com/bennofs/th-lift-instances/issues
synopsis: Lift instances for template-haskell for common data types.
description:
    Most data types in haskell platform do not have Lift instances. This package provides orphan instances
    for containers, text, bytestring and vector.
category: Template Haskell
author: Benno Fünfstück
extra-source-files:
    .ghci
    .gitignore
    .travis.yml
    .vim.custom
    README.md

source-repository head
    type: git
    location: https://github.com/bennofs/th-lift-instances.git

library
    exposed-modules:
        Instances.TH.Lift
    build-depends:
        base >=4.4 && <4.9,
        template-haskell <2.11,
        th-lift <0.8,
        containers >=0.4 && <0.6,
        vector >=0.9 && <0.11,
        text >=0.11 && <1.3,
        bytestring >=0.9 && <0.11
    default-language: Haskell2010
    other-extensions: TemplateHaskell
    hs-source-dirs: src
    ghc-options: -Wall -fwarn-tabs

test-suite tests
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        base <4.9,
        template-haskell <2.11,
        containers >=0.4 && <0.6,
        vector >=0.9 && <0.11,
        text >=0.11 && <1.3,
        bytestring >=0.9 && <0.11,
        th-lift-instances -any,
        QuickCheck >=2.6 && <2.9
    default-language: Haskell2010
    other-extensions: TemplateHaskell
    hs-source-dirs: tests
    other-modules:
        Data
test-suite doctests
    
    if impl(ghc <7.6.1)
        ghc-options: -Werror
    type: exitcode-stdio-1.0
    main-is: doctests.hs
    build-depends:
        base <4.9,
        directory >=1.0 && <1.3,
        doctest >=0.9.1 && <0.11,
        filepath <1.5
    default-language: Haskell2010
    hs-source-dirs: tests
    ghc-options: -Wall -threaded
